--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,24 +16,24 @@
 
 
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="You're logged in"-->
-<!--        style="@style/TextAppearance.MaterialComponents.Caption"/>-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You're logged in"
+        style="@style/TextAppearance.MaterialComponents.Caption"/>
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Email"-->
-<!--        android:id="@+id/emailTv"-->
-<!--        style="@style/TextAppearance.MaterialComponents.Body1"/>-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:id="@+id/emailTv"
+        style="@style/TextAppearance.MaterialComponents.Body1"/>
 
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/logoutBtn"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:text="Logout"/>-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logoutBtn"
+        android:layout_marginTop="20dp"
+        android:text="Logout"/>
 
 </LinearLayout>
