adding item with name, bool, UID and pushing to firebase works

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,8 +17,9 @@
             android:id="@+id/editText_todo_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_alignParentStart="true"
-            android:hint="write your item"
+            android:hint="Write your shopping item"
             android:inputType="textPersonName"/>
 
         <Button
