--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -13,17 +13,27 @@
         android:padding="6dp">
 
         <CheckBox
+            android:id="@+id/chBox"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/chBox"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvTaskName"
-            android:text="######"
+            android:text="############################"
             android:textColor="@color/black"
             android:textSize="16sp"/>
+
+        <ImageButton
+            android:id="@+id/btnRemove"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleY="0.5"
+            android:scaleX="0.5"
+            android:background="@android:color/transparent"
+            android:gravity="end"
+            android:src="@drawable/bin_orange" />
 
     </LinearLayout>
 
